# kimage

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 760ywx6g3nzyggm34qyncl2gsbr2as8c-source  p3iiyq38rzywvachxnxpx2gdn9ni5mza-source  yqy82fn77fy3rv7lpwa9m11w3a2nnqg5-source
